--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -11,7 +11,7 @@
 
     <fragment
         android:id="@+id/coursesFragment"
-        android:name="com.robosh.basestartapplication.courses.view.DetailCoursesFragment"
+        android:name="com.robosh.basestartapplication.courses.view.CoursesFragment"
         android:label="@string/courses_title">
         <action
             android:id="@+id/action_coursesFragment_to_detailsCourseFragment"
@@ -20,6 +20,9 @@
             app:exitAnim="@anim/slide_out_to_left"
             app:popEnterAnim="@anim/slide_in_from_left"
             app:popExitAnim="@anim/slide_out_to_right" />
+        <action
+            android:id="@+id/action_coursesFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 
     <fragment
