--- a/app/src/main/res/layout/view_holder_course.xml
+++ b/app/src/main/res/layout/view_holder_course.xml
@@ -25,8 +25,8 @@
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@mipmap/ic_launcher" />
+            android:src="@drawable/loader"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/movieTitle"
