--- a/app/src/main/res/layout/view_holder_comments.xml
+++ b/app/src/main/res/layout/view_holder_comments.xml
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/commentText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
