--- a/app/src/main/res/layout/activity_lesson_detail.xml
+++ b/app/src/main/res/layout/activity_lesson_detail.xml
@@ -86,7 +86,7 @@
             app:layout_constraintTop_toBottomOf="@id/detailLessonDescription" />
 
         <LinearLayout
-            android:id="@+id/lessonComments"
+            android:id="@+id/lessonCommentsText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_large"
@@ -99,6 +99,12 @@
                 android:text="@string/comments"
                 android:textSize="@dimen/small_text_size"
                 android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/lessonCommentList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
