--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -96,6 +96,7 @@
             android:background="@color/colorGray" />
 
         <LinearLayout
+            android:id="@+id/myCoursesOpenId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
