--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -64,6 +64,13 @@
             app:exitAnim="@anim/slide_out_to_left"
             app:popEnterAnim="@anim/slide_in_from_left"
             app:popExitAnim="@anim/slide_out_to_right" />
+        <action
+            android:id="@+id/action_accountFragment_to_myCoursesFragment"
+            app:destination="@id/myCoursesFragment"
+            app:enterAnim="@anim/slide_in_to_right"
+            app:exitAnim="@anim/slide_out_to_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_to_right"/>
     </fragment>
     <fragment
         android:id="@+id/wishListFragment"
@@ -74,5 +81,9 @@
         android:id="@+id/certificateFragment"
         android:name="com.robosh.basestartapplication.certificates.CertificateFragment"
         android:label="Сертифікати" />
+    <fragment
+        android:id="@+id/myCoursesFragment"
+        android:name="com.robosh.basestartapplication.mycourses.MyCoursesFragment"
+        android:label="Мої курси" />
 
 </navigation>
