create empty wishlist models and viewmodel

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -74,7 +74,7 @@
     </fragment>
     <fragment
         android:id="@+id/wishListFragment"
-        android:name="com.robosh.basestartapplication.wishlist.WishListFragment"
+        android:name="com.robosh.basestartapplication.wishlist.view.WishListFragment"
         android:label="Збереженні" />
 
     <fragment
